# ml-finance-churn-model

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_pipeline.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
config/: params.yaml  selected_features.json
data/processed/: boruta_selected_features.csv  train_engineered.csv
docs/memory/: miguelDeLaFuenteMemoria.aux  miguelDeLaFuenteMemoria.out  miguelDeLaFuenteMemoria.tex  miguelDeLaFuenteMemoria.toc
docs/profiling_output/: profile.json  profile_report.json
notebooks/: 02_feature_selection.ipynb  model-prototyping.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: __init__.py  config.py  logger.py  predict.py  schema.py  train.py
src/data/: __init__.py  data_loader.py
src/evaluation/: __init__.py  metrics.py
src/features/: __init__.py  engineering.py
src/preprocessing/: __init__.py  model_wrapper.py  pipelines.py
src/training/: __init__.py  model_configs.py  trainer.py
src/utils/: __init__.py  mlflow_utils.py
submissions/: submission_catboost_20251122_203436.csv  submission_catboost_20251122_210047.csv  submission_catboost_20251129_110330.csv  submission_catboost_optimized_20251122_183040.csv  submission_catboost_optimized_20251122_195601.csv  submission_random-forest_20251128_203023.csv  submission_xgboost_optimized.csv
